scss/_layout.scss
html {
  height: 100%;
}

body {
  margin: 0;
  font-family: sans-serif;
  display: grid;
  grid-template-areas:
    "header"
    "content";
  grid-template-rows: auto 1fr;
  height: 100%;

  > header {
    grid-area: header;
  }

  main {
    position: relative;
    grid-area: content;

    @include breakpoint($sm) {
      overflow-y: auto;
      scrollbar-width: thin;
      scrollbar-color: #7777c0 #e0e0e0;
    }

    section {
      &:nth-child(even) {
        background-color: $section-even-color;
      }

      &:nth-child(odd) {
        background-color: $section-odd-color;
      }
    }
  }
}

header,
footer {
  background-color: #000;
  color: #fff;
  scrollbar-width: thin;
}

header,
footer {
  .row-2 {
    > * {
      display: grid;
    }

    > :last-child {
      @include breakpoint($sm) {
        justify-content: end;
      }
    }
  }
}

